@@ -75,7 +75,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jdk.language.version>13</jdk.language.version>
+		<jdk.language.version>14</jdk.language.version>
 		<maven.compiler.source>${jdk.language.version}</maven.compiler.source>
 		<maven.compiler.target>${jdk.language.version}</maven.compiler.target>
 
@@ -91,6 +91,7 @@
 		<install4j.home>/home/travis/build/mediathekview/MediathekView/install4j8.0.7</install4j.home>
 		<install4j.licenseKey>${env.LICENSE_KEY_8}</install4j.licenseKey>
         <kotlin.version>1.3.72</kotlin.version>
+		<kotlin.language.target>13</kotlin.language.target>
     </properties>
 
 	<dependencies>
@@ -448,6 +449,7 @@
 								<source>src/main/java</source>
 								<source>target/generated-sources/annotations</source>
 							</sourceDirs>
+							<jvmTarget>${kotlin.language.target}</jvmTarget>
 						</configuration>
 					</execution>
 					<execution>
@@ -468,7 +470,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<release>11</release>
+					<release>${jdk.language.version}</release>
+					<compilerArgs>--enable-preview</compilerArgs>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>info.picocli</groupId>
